--- a/estilo/style.css
+++ b/estilo/style.css
@@ -86,6 +86,26 @@ nav a:hover{
     /*box-shadow: 2px 2px 10px var(--cor-0);*/
 }
 
+/*.search-box{
+    
+
+}
+
+.search-btn{
+    
+}
+
+.search-txt{
+    
+}
+.search-box:hover > .search-txt{
+      
+}
+
+.search-box:hover > .search-btn{
+    background-color: rgb(0, 0, 0);
+}*/
+
 main{
     min-width: 300px;
     max-width: 1000px;
